--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="data:image/svg+xml,%3csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M6 2H18C19.1046 2 20 2.89543 20 4V20C20 21.1046 19.1046 22 18 22H6C4.89543 22 4 21.1046 4 20V4C4 2.89543 4.89543 2 6 2Z' stroke='%23334155' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3e%3crect x='8' y='6' width='4' height='4' rx='1' stroke='%230ea5e9' stroke-width='2'/%3e%3cpath d='M14 8H16' stroke='%23334155' stroke-width='2' stroke-linecap='round'/%3e%3cpath d='M8 14H16' stroke='%23334155' stroke-width='2' stroke-linecap='round'/%3e%3cpath d='M8 17H12' stroke='%23334155' stroke-width='2' stroke-linecap='round'/%3e%3c/svg%3e" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modern CV Builder</title>
     <script src="https://cdn.tailwindcss.com"></script>
